<resources>
    <string name="app_name">Count</string>

    <!-- HEADERS -->
    <string name="balance">Balance:</string>
    <string name="allowance">Allowance:</string>

    <!-- Overflow menu actions -->
    <string name="action_clear">Clear list</string>
    <string name="action_export">Export record</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_money">Clear money</string>

    <!-- ADDING ITEM DIALOG BOX STRINGS -->
    <string name="title_add_item">Add an item</string>
    <string name="label_add_item_name_text_view">Item name</string>
    <string name="button_add_item">ADD ITEM</string>
    <string name="hint_add_item_name">Enter item name</string>
    <string name="hint_add_item_price">Enter item price</string>
    <string name="label_add_item_price_text_view">Item price</string>
    <string name="label_add_item_amount">Item amount</string>
    <string name="label_add_itemType">Item type</string>
    <string name="toast_error_adding_item">Your item name or price is invalid!</string>

    <!-- ADDING MONEY DIALOG BOX STRINGS -->
    <string name="string_add_money">Money information</string>
    <string name="btn_addMoney_positive">ADD</string>
    <string name="dialog_addOrSet">Reset money</string>

    <!-- Exporting LIST DIALOG strings -->
    <string name="title_confirm_export">Confirm export</string>
    <string name="message_confirm_export">Are you sure you want to export your item list?</string>
    <string name="toast_success_export">Successfully exported log!</string>

    <!-- Clearing money DIALOG strings -->
    <string name="title_confirm_clear_money">Confirm clearing money</string>
    <string name="messsage_confirm_clear_money">Are you sure you want to clear your money</string>

    <!-- Clearing LIST DIALOG strings -->
    <string name="title_confirm_clear">Confirm clearing list</string>
    <string name="message_confirm_clear">Are you sure you want to clear your item list?</string>

    <!-- Toasts -->
    <string name="toast_no_money">You have no money!</string>
    <string name="toast_error_empty_list">Your list is empty!</string>
    <string name="toast_error_adding_money">You\'re not adding any money!</string>
    <string name="toast_invalid_phoneNo">Your chosen phone number is invalid!</string>

    <!-- Entry Type Enum Names -->
    <string name="itemType_gadgets">Gadgets</string>
    <string name="itemType_food_drink">Food &amp; Drink</string>
    <string name="itemType_misc_payment">Misc.</string>
    <string name="itemType_entertainment">Entertainment</string>
    <string name="no_type">No Type</string>
    <string name="itemType_school_supplies">School Supplies</string>
    <string name="preference_phoneNumber">Phone number</string>
    <string name="string_add_phone_number">Add phone number</string>
    <string name="settings_title">Settings</string>

    <!-- Preference Category Titles-->
    <string name="prefCategoryTitle_itemList">List settings</string>
    <string name="prefCategoryTitle_currency">Currency</string>

    <!-- Preference Titles -->
    <string name="prefTitle_phoneNo">Phone Number</string>
    <string name="prefTitle_currency">Currency</string>
    <string name="prefTitle_clearList">Enable list  clearing</string>

    <!-- Preference Keys -->
    <string name="prefKey_phoneNo">key_change_phoneNo</string>
    <string name="prefKey_currency">key_change_currency</string>
    <string name="prefKey_clearList">key_change_clearList</string>

    <!-- Preference Summaries -->
    <string name="prefSummary_clearList">Enable item list clearing every 12:00 AM</string>

    <!-- Shared Preferences Value Key -->
    <string name="keyValue_phoneNo">KEY_PHONE_NO</string>
    <string name="keyValue_currency">KEY_CURRENCY</string>

    <!-- Text sending Strings -->
    <string name="text_change_left">Change left:</string>
    <string name="text_total_money">Total money:</string>

    <!-- Entry List Display Strings -->
    <string name="text_item_count_string">x%1$d</string>
    <string name="notn_title_clear">Item list cleared!</string>
    <string name="notn_content_clear">Your item list has been cleared!</string>
    <string name="amt_for_day">Amt. for the day: </string>
    <string name="balance_label">Remaining balance:</string>
    <string name="money_info_title">Money information</string>

</resources>
