<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ListActivity.ListActivity">

     <item
         android:id="@+id/action_add_money"
         android:title="@string/string_add_money"
         android:icon="@drawable/ic_action_setmoney"
         app:showAsAction="always"/>

    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never"/>
       <!-- android:icon="@drawable/ic_action_export"-->

    <item
        android:id="@+id/action_clear_money"
        android:title="@string/action_clear_money"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear_items"
        android:title="@string/action_clear"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>